main commands implemented - todo: move

--- a/src/app/components/game-console/game-console.component.scss
+++ b/src/app/components/game-console/game-console.component.scss
@@ -9,3 +9,28 @@
     width: auto !important;
   }
 }
+
+
+.rules {
+    display: flex;
+    flex-direction: column;
+    padding: 1px;
+    flex: 1 1 auto;
+    align-self: center;
+  }
+  .rules--title {
+    align-self: center;
+    font-weight: 200;
+    color: rgb(255, 175, 62);
+    font-size: 48px;
+  }
+  .rules--subtitle {
+    box-sizing: border-box;
+    color: rgb(255, 157, 149);
+    font-weight: 400;
+    align-self: center;
+  }
+  .rule {
+    padding-right: 8px;
+    font-weight: 200;
+  }
