--- a/src/app/components/game-tableground/game-tableground.component.html
+++ b/src/app/components/game-tableground/game-tableground.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngFor="let row of table.row; let i = index">
         <div class="tableground--row">
             <ng-container *ngFor="let col of table.column; let j = index">
-                <square-cell class="tableground--column" [isSelected]="true"></square-cell>
+                <square-cell class="tableground--column" [orientation]="orientation$ | async" [isSelected]="_isRobotInSquare$(i,j) | async"></square-cell>
             </ng-container>
         </div>
     </ng-container>
