--- a/src/app/components/game-console/game-console.component.html
+++ b/src/app/components/game-console/game-console.component.html
@@ -32,13 +32,15 @@
     margin: auto;" color="primary">Place</button>
 </form>
 <div style="display: flex; flex-direction: row; justify-content: space-between;padding: 24px">
-    <button [disabled]="_canMove$ | async" mat-button style="background-color: lightblue" color="primary">
-        <span [matTooltip]="_disabledReason">Move</span></button>
     <button (click)="dispatchCommand('LEFT')" [disabled]="_canMove$ | async" mat-button style="background-color: orange"
         color="primary">
         <span [matTooltip]="_disabledReason">Left</span></button>
-    <button [disabled]="_canMove$ | async" mat-button style="background-color: lightcoral" color="primary">
-        <span (click)="dispatchCommand('RIGHT')" [matTooltip]="_disabledReason">Right</span></button>
+    <button (click)="dispatchCommand('MOVE')" [disabled]="_canMove$ | async" mat-button
+        style="background-color: lightblue" color="primary">
+        <span [matTooltip]="_disabledReason">Move</span></button>
+    <button (click)="dispatchCommand('RIGHT')" [disabled]="_canMove$ | async" mat-button
+        style="background-color: lightcoral" color="primary">
+        <span [matTooltip]="_disabledReason">Right </span></button>
     <button (click)="dispatchCommand('REPORT')" [disabled]="_canMove$ | async" mat-button
         style="background-color: lightcyan" color="primary">
         <span [matTooltip]="_disabledReason" matTooltip="_disabledReason">Report</span></button>
@@ -54,4 +56,8 @@
             <h2 class="rule">Orientation: {{state.orientation}}</h2>
         </div>
     </div>
+</ng-template>
+
+<ng-template #errorTemplate>
+    <h1 (click)="dismiss()" style="padding: 6% 0 0% 6%;" class="rules--title">Can't MOVE! I'll fall down</h1>
 </ng-template>
