--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-body {
-    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: rgb(51, 51, 51);
-    font-size: 16px;
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height: 100%;
-}
-.square {
-    background-color: green;
-}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.error-snackbar {
+    background-color: red;
+    display: flex;
+    justify-content: center;
+}
