--- a/src/app/components/game-tableground/game-tableground.component.scss
+++ b/src/app/components/game-tableground/game-tableground.component.scss
@@ -2,14 +2,13 @@
     flex: 1;
   }
   .tableground--row {
-    display: flex; flex-direction: row; height: 20%;
+    display: flex; flex-direction: row
   }
   .tableground--column {
     display: flex; 
     flex:1; 
     flex-direction: column;
-    background-color: azure; 
-    border-style: solid;  
+    border: 1px solid black;  
     align-items: center;
     justify-content: center;
   }
