--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
 .home {
   box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
   padding: 16px;
   width: 100%;
   height: 100%;
@@ -31,25 +29,25 @@
   align-self: center;
 }
 .form {
-  padding: 16px;
+  padding: 24px;
   flex: 1 1 50vh;
 }
 .rules--title {
-  box-sizing: border-box;
   margin: 0px 0px 32px;
   font-weight: 200;
   color: rgb(255, 175, 62);
   font-size: 48px;
 }
 .rules--subtitle {
-  box-sizing: border-box;
   margin: 0px 0px 32px;
   color: rgb(255, 157, 149);
   font-weight: 400;
+  padding-left: 16px;
 }
 .rule {
   padding-bottom: 8px;
   font-weight: 200;
+  padding-left: 16px;
 }
 .rule--title {
   font-weight: bold;
