--- a/src/app/components/game-console/game-console.component.html
+++ b/src/app/components/game-console/game-console.component.html
@@ -1,7 +1,7 @@
 <form class="form-group" [formGroup]="_placeForm">
     <mat-form-field class="form-field" appearance="fill">
         <mat-label>X position</mat-label>
-        <input formControlName="xposition" type="number" matInput placeholder="type X position">
+        <input formControlName="xposition" type="number" matInput placeholder="type X position" />
         <mat-error *ngIf="_placeForm.get('xposition')?.hasError('required')">
             X position <strong>required</strong>
         </mat-error>
@@ -14,7 +14,7 @@
     </mat-form-field>
     <mat-form-field class="form-field" appearance="fill">
         <mat-label>Y position</mat-label>
-        <input formControlName="yposition" type="number" matInput placeholder="type Y position">
+        <input formControlName="yposition" type="number" matInput placeholder="type Y position" />
         <mat-error *ngIf="_placeForm.get('yposition')?.hasError('required')">
             Y position <strong>required</strong>
         </mat-error>
@@ -29,27 +29,32 @@
         <mat-label>Orientation</mat-label>
         <mat-select formControlName="orientation">
             <ng-container *ngFor="let orientation of _orientations">
-                <mat-option [value]="orientation">{{orientation}}</mat-option>
+                <mat-option [value]="orientation">{{ orientation }}</mat-option>
             </ng-container>
         </mat-select>
     </mat-form-field>
-    <button (click)="dispatchCommand('PLACE')" mat-button [disabled]="!_placeForm.valid" style="background-color: orange;
-    height: fit-content;
-    margin: auto;" color="primary">Place</button>
+    <button (click)="dispatchCommand('PLACE')" class="place" mat-button [disabled]="!_placeForm.valid"
+        style="margin: auto" color="primary">
+        Place
+    </button>
 </form>
-<div style="display: flex; flex-direction: row; justify-content: space-between;padding: 24px">
+<div class="commands">
     <button (click)="dispatchCommand('LEFT')" [disabled]="_canMove$ | async" mat-button style="background-color: orange"
         color="primary">
-        <span [matTooltip]="_disabledReason">Left</span></button>
+        <span [matTooltip]="_disabledReason">Left</span>
+    </button>
     <button (click)="dispatchCommand('MOVE')" [disabled]="_canMove$ | async" mat-button
         style="background-color: lightblue" color="primary">
-        <span [matTooltip]="_disabledReason">Move</span></button>
+        <span [matTooltip]="_disabledReason">Move</span>
+    </button>
     <button (click)="dispatchCommand('RIGHT')" [disabled]="_canMove$ | async" mat-button
         style="background-color: lightcoral" color="primary">
-        <span [matTooltip]="_disabledReason">Right </span></button>
+        <span [matTooltip]="_disabledReason">Right </span>
+    </button>
     <button (click)="dispatchCommand('REPORT')" [disabled]="_canMove$ | async" mat-button
         style="background-color: lightcyan" color="primary">
-        <span [matTooltip]="_disabledReason" matTooltip="_disabledReason">Report</span></button>
+        <span [matTooltip]="_disabledReason" matTooltip="_disabledReason">Report</span>
+    </button>
 </div>
 
 <ng-template #reportTemplate let-state>
@@ -57,13 +62,15 @@
         <!-- <h1 class="rules--title">Ciao da Toy Robot</h1> -->
         <h1 class="snackbar--title">Hey! That's my position:</h1>
         <div class="snackbar--container">
-            <h2 class="snackbar--info">X: {{state.column}}</h2>
-            <h2 class="snackbar--info">Y: {{state.row}}</h2>
-            <h2 class="snackbar--info">Orientation: {{state.orientation}}</h2>
+            <h2 class="snackbar--info">X: {{ state.column }}</h2>
+            <h2 class="snackbar--info">Y: {{ state.row }}</h2>
+            <h2 class="snackbar--info">Orientation: {{ state.orientation }}</h2>
         </div>
     </div>
 </ng-template>
 
 <ng-template #errorTemplate let-message>
-    <h1 (click)="dismiss()" style="padding: 6% 0 0% 6%;" class="rules--title">{{message}}</h1>
+    <h1 (click)="dismiss()" style="padding: 6% 0 0% 6%" class="rules--title">
+        {{ message }}
+    </h1>
 </ng-template>
