toy-robot@1.0.0 - official release

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
         <span class="rule--title">REPORT</span> - will announce the X,Y and F of
         the robot. This can be in any form, but standard output is sufficient.
       </div>
+      <div style="font-style: oblique; padding-left: 24px;" class="rule">
+        - The origin (0,0) can be considered to be the <span class="rule--title">SOUTH WEST</span> most corner.
+      </div>
     </div>
     <!-- Game console -->
     <game-console class="form"></game-console>
